# Min version of CMake 
cmake_minimum_required (VERSION 2.6)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Bin)

set(TARGET_LIBS ${TARGET_ADDED_LIBRARIES}, ${OPENSCENEGRAPH_LIBS})

# Macro 
macro(SETUP_EXAMPLE TARGET_NAME)
	add_executable(${TARGET_NAME} ${TARGET_SRC})
	target_link_libraries(${TARGET_NAME} ${OPENSCENEGRAPH_LIBS})
endmacro() 

add_subdirectory(osg2cpp)
add_subdirectory(osganimate)
add_subdirectory(osgautocapture)
add_subdirectory(osgautotransform)
add_subdirectory(osgbillboard)
add_subdirectory(osgblendequation)
add_subdirectory(osgcallback)
add_subdirectory(osgcamera)
add_subdirectory(osgcatch)
add_subdirectory(osgclip)
add_subdirectory(osgcompositeviewer)
add_subdirectory(osgcopy)
add_subdirectory(osgcubemap)
add_subdirectory(osgdelaunay)
add_subdirectory(osgcluster)
add_subdirectory(osgdepthpartition)
add_subdirectory(osgdepthpeeling)
add_subdirectory(osgdrawinstanced)
add_subdirectory(osgdistortion)
add_subdirectory(osgfadetext)
add_subdirectory(osgfont)
add_subdirectory(osgforest)
add_subdirectory(osgfxbrowser)
add_subdirectory(osggameoflife)
add_subdirectory(osggeodemo)
add_subdirectory(osggeometry)
add_subdirectory(osggeometryshaders)
add_subdirectory(osghangglide)
add_subdirectory(osghud)
add_subdirectory(osgimagesequence)
add_subdirectory(osgimpostor)
add_subdirectory(osgintersection)
add_subdirectory(osgkdtree)
add_subdirectory(osgkeyboard)
add_subdirectory(osgkeyboardmouse)
add_subdirectory(osglauncher)
add_subdirectory(osglight)
add_subdirectory(osglightpoint)
add_subdirectory(osglogicop)
add_subdirectory(osglogo)
add_subdirectory(osgmanipulator)
add_subdirectory(osgmotionblur)
add_subdirectory(osgmovie)
add_subdirectory(osgmultiplerendertargets)
add_subdirectory(osgmultitexture)
add_subdirectory(osgmultitexturecontrol)
add_subdirectory(osgoccluder)
add_subdirectory(osgocclusionquery)
add_subdirectory(osgpackeddepthstencil)
add_subdirectory(osgpagedlod)
add_subdirectory(osgparametric)
add_subdirectory(osgparticle)
add_subdirectory(osgparticleeffects)
add_subdirectory(osgphotoalbum)
add_subdirectory(osgpick)
add_subdirectory(osgplanets)
add_subdirectory(osgpoints)
add_subdirectory(osgpointsprite)
add_subdirectory(osgprecipitation)
add_subdirectory(osgprerender)
add_subdirectory(osgprerendercubemap)
add_subdirectory(osgreflect)
add_subdirectory(osgrobot)
add_subdirectory(osgscalarbar)
add_subdirectory(osgscreencapture)
add_subdirectory(osgscribe)
add_subdirectory(osgsequence)
add_subdirectory(osgshaders)
add_subdirectory(osgshaderterrain)
add_subdirectory(osgshadow)
add_subdirectory(osgshape)
add_subdirectory(osgsharedarray)
add_subdirectory(osgsimplifier)
add_subdirectory(osgsimulation)
add_subdirectory(osgsidebyside)
add_subdirectory(osgslice)
add_subdirectory(osgspacewarp)
add_subdirectory(osgspheresegment)
add_subdirectory(osgspotlight)
add_subdirectory(osgstereoimage)
add_subdirectory(osgstereomatch)
add_subdirectory(osgteapot)
add_subdirectory(osgterrain)
add_subdirectory(osgtessellate)
add_subdirectory(osgtext)
add_subdirectory(osgtext3D)
add_subdirectory(osgtexture1D)
add_subdirectory(osgtexture2D)
add_subdirectory(osgtexture3D)
add_subdirectory(osgtexturerectangle)
add_subdirectory(osgthirdpersonview)
add_subdirectory(osgvertexprogram)
add_subdirectory(osgvolume)
add_subdirectory(osgwindows)
add_subdirectory(osganimationhardware)
add_subdirectory(osganimationtimeline)
add_subdirectory(osganimationnode)
add_subdirectory(osganimationmakepath)
add_subdirectory(osganimationskinning)
add_subdirectory(osganimationsolid)
add_subdirectory(osganimationviewer)
add_subdirectory(osgbrowser)
add_subdirectory(osgwidgetaddremove)
add_subdirectory(osgwidgetbox)
add_subdirectory(osgwidgetcanvas)
add_subdirectory(osgwidgetframe)
add_subdirectory(osgwidgetinput)
add_subdirectory(osgwidgetlabel)
add_subdirectory(osgwidgetmessagebox)
add_subdirectory(osgwidgetmenu)
add_subdirectory(osgwidgetnotebook)
add_subdirectory(osgwidgetperformance)
add_subdirectory(osgwidgetscrolled)
add_subdirectory(osgwidgetshader)
add_subdirectory(osgwidgetstyled)
add_subdirectory(osgwidgettable)
add_subdirectory(osgwidgetwindow)

IF(OSG_CPP_EXCEPTIONS_AVAILABLE)
add_subdirectory(osgunittests)
add_subdirectory(osgmemorytest)
ENDIF()

add_subdirectory(osgpdf)

IF(GLUT_FOUND)
add_subdirectory(osgviewerGLUT)
ENDIF(GLUT_FOUND)

